5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4003/executions/1798_2566.log
== SUBMITION (2019-06-10 15:27:57) 
-- CODE:
from numpy import*

v = array(eval(input("!vetor: ")))
vn = zeros(6, dtype=float)

for e in v:
	if e == 2:
		vn[0] = vn[0] + 1
	elif e == 3:
		vn[1] = vn[1] + 1
	elif e == 4:
		vn[2] = vn[2] + 1
	elif == 5:
		vn[3] = vn[3] + 1
	elif == 6:
		vn[4] = vn[4] + 1
	elif == 7:
		vn[5] = vn[5] + 1

t = sum(vn)
i = 0
for k in vn:
	vn[i] = round((vn[i]*(100/t)),1)
	i = i + 1
print(vn)
-- EXECUTION TIME:
0.674065
-- ERROR:
  File "/home/codebench/codes/1798/2566/main.py", line 13
    elif == 5:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:28:00) 
-- CODE:
from numpy import*

v = array(eval(input("!vetor: ")))
vn = zeros(6, dtype=float)

for e in v:
	if e == 2:
		vn[0] = vn[0] + 1
	elif e == 3:
		vn[1] = vn[1] + 1
	elif e == 4:
		vn[2] = vn[2] + 1
	elif == 5:
		vn[3] = vn[3] + 1
	elif == 6:
		vn[4] = vn[4] + 1
	elif == 7:
		vn[5] = vn[5] + 1

t = sum(vn)
i = 0
for k in vn:
	vn[i] = round((vn[i]*(100/t)),1)
	i = i + 1
print(vn)
-- ERROR:
File "XXXX", line 13
    elif == 5:
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:28:18) 
-- CODE:
from numpy import*

v = array(eval(input("!vetor: ")))
vn = zeros(6, dtype=float)

for e in v:
	if e == 2:
		vn[0] = vn[0] + 1
	elif e == 3:
		vn[1] = vn[1] + 1
	elif e == 4:
		vn[2] = vn[2] + 1
	elif e == 5:
		vn[3] = vn[3] + 1
	elif e == 6:
		vn[4] = vn[4] + 1
	elif e == 7:
		vn[5] = vn[5] + 1

t = sum(vn)
i = 0
for k in vn:
	vn[i] = round((vn[i]*(100/t)),1)
	i = i + 1
print(vn)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:28:45) 
-- CODE:
from numpy import*

v = array(eval(input("!vetor: ")))
vn = zeros(6, dtype=float)

for e in v:
	if e == 2:
		vn[0] = vn[0] + 1
	elif e == 3:
		vn[1] = vn[1] + 1
	elif e == 4:
		vn[2] = vn[2] + 1
	elif e == 5:
		vn[3] = vn[3] + 1
	elif e == 6:
		vn[4] = vn[4] + 1
	elif e == 7:
		vn[5] = vn[5] + 1

t = sum(vn)
i = 0
for k in vn:
	vn[i] = round((vn[i]*(100/t)),1)
	i = i + 1
print(vn)
-- EXECUTION TIME:
1.25392
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
